fix(wi-title): fix title overflow and align cell items center (#2759)

--- a/src/app/components_ngrx/planner-list/planner-list.component.less
+++ b/src/app/components_ngrx/planner-list/planner-list.component.less
@@ -215,12 +215,11 @@ a.disabled {
 /// ng x-datatables css
 
 .cell-class {
-  display: table !important;
   padding-top: 3px !important;
   padding-bottom: 3px !important;
 }
 .datatable-body-cell-label {
-  display: table-cell;
+  display: flex;
   vertical-align: middle;
   height: 100%;
   align-items: center;
